--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="style.css">
+<nav>
+  <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="about.html">Sobre Nosotros</a></li>
+      <li><a href="contact.html">Contáctanos</a></li>
+  </ul>
+</nav>
 <html>
 
 <head>
@@ -8,14 +16,15 @@
 </head>
 
 <body>
-  Hello world
-
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <h1>Bienvenido al Blog de Quesos</h1>
+  <p>Explora el maravilloso mundo de los quesos. Desde los clásicos hasta los más exóticos, aquí encontrarás todo lo que necesitas saber.</p>
+  <h2>Tipos de Quesos</h2>
+  <p>Descubre los diferentes tipos de quesos, como el queso cheddar, el queso azul, el queso de cabra y más.</p>
+  <img src="https://via.placeholder.com/400" alt="Quesos variados">
 </body>
-
+<footer>
+  <p>Autor: Ninjava</p>
+  <p>Contacto: contacto@quesosblog.com</p>
+  <p>Proyecto: Blog de Quesos</p>
+</footer>
 </html>
