--- a/about.html
+++ b/about.html
@@ -15,8 +15,11 @@
 </head>
 <body>
     <h1>Sobre Nosotros</h1>
-<p>Somos un grupo de apasionados por los quesos. Nuestro objetivo es compartir nuestro conocimiento y amor por este delicioso alimento.</p>
-<p>Este sitio web fue creado para educar e inspirar a otros amantes del queso.</p>
+<p>somos apasionados por ofrecer los sabores más auténticos y deliciosos a través de nuestros quesos y derivados lácteos. Fundada en [año], nuestra empresa ha crecido con el compromiso de brindar productos de la más alta calidad, elaborados con ingredientes seleccionados y un proceso de fabricación artesanal que resalta lo mejor de nuestra tradición láctea.
+
+    Nos enorgullece ofrecer una amplia variedad de quesos, desde los más suaves y cremosos hasta los más curados y sabrosos, siempre respetando las mejores prácticas de producción y el respeto por el medio ambiente. Cada uno de nuestros productos es creado con amor, dedicación y la más estricta selección de leche fresca y de origen local.
+    
+    Además de nuestros quesos, también ofrecemos derivados lácteos como yogures, cremas y mantequillas, todos elaborados con el mismo cuidado y compromiso que nos caracteriza. Creemos en la importancia de disfrutar de productos frescos, saludables y llenos de sabor, y nos esforzamos cada día para que cada bocado sea una experiencia única.</p>
 </body>
 </html>
 <footer>
