--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <h1>Contáctanos</h1>
 <p>¿Tienes alguna pregunta o sugerencia? ¡Nos encantaría escucharte!</p>
 <p>Email: contacto@quesosblog.com</p>
-<p>Teléfono: +123 456 7890</p>
+<p>Teléfono: +5555555555</p>
 </body>
 <footer>
     <p>Autor: Ninjava</p>
