--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documento</title>
 </head>
 <body>
     <h1>Contáctanos</h1>
 <p>¿Tienes alguna pregunta o sugerencia? ¡Nos encantaría escucharte!</p>
-<p>Email: contacto@quesosblog.com</p>
+<p>Email: contact@quesosblog.com</p>
 <p>Teléfono: +5555555558</p>
 </body>
 <footer>
