--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documento_bien</title>
 </head>
 <body>
     <h1>Contáctanos</h1>
 <p>¿Tienes alguna pregunta o sugerencia? ¡Nos encantaría escucharte!</p>
 <p>Email: contacto@quesosblog.com</p>
-<p>Teléfono: +5555555555</p>
+<p>Teléfono: +5566778899</p>
 </body>
 <footer>
     <p>Autor: Ninjava</p>
